--- a/Electrical/css/style.css
+++ b/Electrical/css/style.css
@@ -376,6 +376,7 @@
         .contact-info {
             flex: 1;
             min-width: 280px;
+            margin-left: 30px;
         }
 
         .contact-form {
@@ -656,4 +657,5 @@
                justify-content: center;
            }
        }
+
 
